--- a/views/liveRoom.ejs
+++ b/views/liveRoom.ejs
@@ -20,7 +20,7 @@
     <div class="live-right">
       <p class="viewer-info">
         <span class="viewer-icon">👀</span> Người xem: 
-        <span id="viewerCount">0</span>
+        <span id="viewerCount" class="viewer-count">0</span>
       </p>
     </div>
   </div>
