🐬🎣 Checkpoint ./views/streamer.ejs:37906304/29168 ./public/style.css:37906304/121 ./server.js:37906304/10391 ./views/liveRoom.ejs:37906304/6271

--- a/public/style.css
+++ b/public/style.css
@@ -61,6 +61,11 @@ body {
   pointer-events: none; /* tắt tương tác */
 }
 
+.control-panel.collapsed .sigma {
+  opacity: 0;
+  pointer-events: none; /* tắt tương tác */
+}
+
 /* Style cho các nút bên trong panel */
 .control-panel button {
   margin: 5px;
